--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "addons/website_youzan"]
 	path = addons/website_youzan
 	url = git@gitee.com:ferren/website_youzan.git
+[submodule "addons/website_sale_weapp"]
+	path = addons/website_sale_weapp
+	url = git@gitee.com:ferren/website_sale_weapp.git
